# llm-zoomcamp-2026-code

./: .gitignore  docker-compose.yml  pyproject.toml
.ipynb_checkpoints/: rag_helper-checkpoint.py
01-agentic-rag/: Untitled.ipynb  faq.db  ingest.py  persistent_rag.ipynb  rag_helper.py  sqlite-ingest.ipynb
01-agentic-rag/.ipynb_checkpoints/: elasticsearch_backend-checkpoint.py  function_calling_elasticsearch-checkpoint.py  ingest-checkpoint.py  persistent_rag-checkpoint.ipynb
01-agentic-rag/homework/: homework.ipynb  ingest.py  rag_helper.py
01-agentic-rag/homework/.ipynb_checkpoints/: homework-checkpoint.ipynb
02-vector-search/: homework.ipynb  ingest.py  rag_helper.py
02-vector-search/.ipynb_checkpoints/: homework-checkpoint.ipynb
